	 fix filenames in comments (patch #1716201) (Stuart Brady).
20070513 README,Makefile.am,acinclude.m4,configure.in,settings.dat,
         sound.c,man/fuse.1,ui/options.dat: add support for using
         libsamplerate to reduce aliasing noise in beeper emulation
	 (fixes bug #1629741) (Fred).
20070513 debugger/{commandl.l,commandy.y}: fix clashes with Win32 API
	 (patch #1711412) (Stuart Brady).
20070513 dxsound.c: add synchronisation, 16-bit sound support and improved
	 error handling (patch #1713519) (Stuart Brady).
20070513 Makefile.am,configure.in,timer.c,sound/lowlevel.h: use DirectSound
	 if available (patch #1716734) (Stuart Brady).
20070513 z80/z80.pl,z80/tests/{edb0,edb1,edb2,edb8,edb9,edba}.out: on
	 LD?R, CP?R and IN?R, the pre-modified value is used for the
	 contention (thanks, Mark Woodmass).
20070515 configure.in,if1.c: check that fsync is available before using it
	 (thanks, Chris Young) (Fred).
20070515 debugger/{breakpoint.[ch],command.c},widget/debugger.c: add
         more comprehensive widget debugger (patch #1150698) (Darren).
20070515 compat/mkstemp.c,if1.c: use O_BINARY in mkstemp() and if1_plug(),
         fixes +3 disk support on Win32 (patch #1716167) (thanks,
         Mark Woodmass) (Stuart Brady).
20070515 configure.in,ui/aalib/*: retire the aalib code, use the aalib
         target for SDL if required (Fred).
20070516 widget/filesel.c: fix possible buffer overflows and tidy code
	 (includes patch #1720377) (thanks, Arda Erdikmen) (Stuart Brady and
	 Phil).
20070517 ui/sdl/sdlui.c: prompt to see if we really want to exit
         (fixes bug #1720384) (thanks, Stuart Brady) (Fred).
20070519 utils.c: add Amiga settings and temp dir paths (part of patch
         #1712260) (Chris Young).
20070519 debugger/{commandl.l,commandy.y}: fix clashes with Amiga API
	 (more of patch #1712260) (Chris Young).
20070519 ui/options.dat: allow 5 digit emulation speed (patch #1718215)
	 (Stuart Brady).