@@ -1657,3 +1657,5 @@
 	 (more of patch #1712260) (Chris Young).
 20070519 ui/options.dat: allow 5 digit emulation speed (patch #1718215)
 	 (Stuart Brady).
+20070519 Makefile.am,configure.in,windres.rc: add resource file to allow
+	 for an icon for the Win32 build (patch #1716742) (Stuart Brady).
